<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginHorizontal="32dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colPreg"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingBottom="20dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btCross"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:background="@drawable/round_sel"
            android:contentDescription="@string/des"
            android:backgroundTint="#F82A50"
            android:padding="4dp"
            android:rotation="45"
            android:src="@drawable/round_add_black_24dp"
            app:tint="@color/white"
            android:layout_margin="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:paddingHorizontal="8dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/etName"
            app:layout_constraintStart_toStartOf="@id/etName" />

        <EditText
            android:id="@+id/etName"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:textCursorDrawable="@drawable/cursor_blue"
            android:layout_height="44dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:hint="@string/name"
            android:importantForAutofill="no"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:paddingHorizontal="8dp"
            android:text="@string/dob"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/llDob"
            app:layout_constraintStart_toStartOf="@id/llDob" />

        <LinearLayout
            android:id="@+id/llDob"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/etName"
            tools:layout_editor_absoluteX="20dp">

            <EditText
                android:id="@+id/etDob"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/date_format"
                android:textCursorDrawable="@drawable/cursor_blue"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="10"
                app:layout_constraintTop_toBottomOf="@id/etName" />

            <ImageView
                android:id="@+id/btDOB"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="12dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/round_sel"
                android:contentDescription="@string/des"
                android:padding="8dp"
                android:src="@drawable/baseline_calendar_today_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/llDob">

            <ImageView
                android:id="@+id/btBOy"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/round_sel"
                android:contentDescription="@string/des"
                android:padding="8dp"
                android:src="@drawable/ic_boy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btGirl"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="40dp"
                android:background="@drawable/round_non_sel"
                android:contentDescription="@string/des"
                android:padding="8dp"
                android:src="@drawable/ic_girl"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>